# advent-of-code

./: .gitignore  LICENSE  README.md  advent-of-code.cabal
05/: bin.hs  main.hs
06/: main.hs
08/: bingo.hs  main.hs
09/: input.hs
10/: input.hs  main.hs
12/: main.hs
13/: main.hs
15/: display.hs  main.hs
16/: main.hs
17/: main.hs
18/: main.hs  map.hs
20/: input.hs
2021/01/: main.hs
2021/02/: main.hs
2021/03/: main.hs
2021/04/: main.hs
2021/05/: diagnostic.hs
2021/07/: bingo.hs  main.hs
2021/08/: input.hs
2021/09/: main.hs  map.hs
2021/10/: map.hs
2021/11/: main.hs
2021/14/: main.hs
2021/15/: input.hs
2021/16/: display.hs
2021/17/: map.hs
2021/18/: input.hs  main.hs  map.hs
2021/19/: main.hs  parser.hs
2021/20/: main.hs  parser.hs
2022/: read.hs
2022/01_adding/: main.hs
2022/01_adding_calories/: Main.hs
2022/02_rock_paper_scissors/: Constants.hs  Main.hs
2022/03_rucksack_reorganization/: Constants.hs  Main.hs
2022/04_camp_cleanup/: Main.hs
2022/05_supply_stacks/: Main.hs
2022/06_tuning_trouble/: Main.hs
2022/07_no_space_left_on_device/: Main.hs
2022/08_treetop_tree_house/: Main.hs
2022/09_rope_bridge/: Main.hs
2022/10_cathode_ray_tube/: Main.hs
2022/11_monkey_in_the_middle/: Main.hs
2022/12_hill_climbing/: Main.hs
2022/13_distress_signal/: Main.hs
2022/14_regolith_reservoir/: Main.hs
2022/app/: Debug.hs  Tree.hs  list.hs  read.hs
2024/: build.gradle.kts
2024/src/main/kotlin/d01/: Main.kt
2024/src/main/kotlin/d01historianhysteria/: Main.kt
2024/src/main/kotlin/d02/: Main.kt
2024/src/main/kotlin/d02rednosedreports/: Main.kt
2024/src/main/kotlin/d03/: Main.kt
2024/src/main/kotlin/d04/: Main.kt
2024/src/main/kotlin/extensions/list/: List.kt
